# AethelOS

./: AUDIT_REPORT.md  BOOT_AETHELOS.bat  CLAUDE.md  Cargo.toml  HUMANS.md  README.md  RING1_SERVICES_STATUS.md  userspace.ld  x86_64-aethelos-userspace.json
aethelos-source/: ARCHITECTURE.txt  BOOT_AETHELOS.bat  CLAUDE.md  CODE_QUALITY_SUMMARY.md  Cargo.toml  DESIGN.md  GENESIS.scroll  INTERACTION-PLAN.md  LAUNCH_AETHELOS.bat  Makefile  NEXT-STEPS.md  QUICKSTART-QEMU.md  QUICKSTART.md  README.md  RUNNING.md  setup-boot.ps1  setup-boot.sh
aethelos-source/ancient-runes/corelib/: Cargo.toml
aethelos-source/ancient-runes/weaving/: Cargo.toml
aethelos-source/awakening/: boot.asm
aethelos-source/awakening/heartwood_loader/: Cargo.toml
aethelos-source/docs/: GLIMMER_FORGE_PLAN.md  PREEMPTIVE_MULTITASKING_PLAN.md  PRODUCTION_READINESS_PLAN.md  WORLD_TREE_PLAN.md
aethelos-source/groves/the-weave_grove/: Cargo.toml
aethelos-source/heartwood/: Cargo.toml  linker.ld  verify_multiboot.sh  x86_64-aethelos.json
aethelos-source/heartwood/.cargo/: config.toml
aethelos-source/heartwood/src/: eldarin.rs  irq_safe_mutex.rs  lib.rs  main.rs  rtl.rs  vga_buffer.rs
heartwood/: Cargo.toml  linker.ld  linker.map  x86_64-aethelos.json
heartwood/.cargo/: config.toml
heartwood/src/: eldarin.rs  fate_command.rs  irq_safe_mutex.rs  lib.rs  main.rs  permanence_command.rs  rtl.rs  sigils_command.rs  stack_protection.rs  test_programs.rs  vga_buffer.rs  wards_command.rs
heartwood/src/attunement/: gdt.rs  idt.rs  idt_handlers.rs  keyboard.rs  keyboard_old_backup.rs  mod.rs  mod_old_backup.rs  per_cpu.rs  pic.rs  timer.rs  ward_of_anonymity.rs  ward_of_sacred_boundaries.rs  ward_of_unseen_paths.rs
heartwood/src/boot/: boot32.rs
heartwood/src/drivers/: ata.rs  mod.rs  serial.rs
heartwood/src/groves/: lifecycle.rs  manager.rs  mod.rs  service.rs
heartwood/src/loom_of_fate/: context.rs  context.rs.backup  elf_loader.rs  harbor.rs  harmony.rs  mod.rs  scheduler.rs  stack.rs  syscalls.rs  system_threads.rs  thread.rs  vessel.rs
heartwood/src/mana_pool/: allocator.rs  aslr.rs  buddy.rs  bump_allocator.rs  capability.rs  capability_table.rs  concordance_of_fates.rs  elf_relocations.rs  ensure_kernel_mapped.rs  entropy.rs  ephemeral_mist.rs  heap_canaries.rs  interrupt_lock.rs  kernel_remap.rs  mod.rs  (+8 more)
(+98 files in other folders)
