[workspace]
resolver = "2"
members = [
    "heartwood",
    "awakening/heartwood_loader",
    "groves/world-tree_grove",
    "groves/the-weave_grove",
    "groves/lanthir_grove",
    "groves/network_sprite",
    "ancient-runes/corelib",
    "ancient-runes/weaving",
    "ancient-runes/script",
]

[workspace.package]
version = "0.1.0"
authors = ["AethelOS Contributors"]
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Core dependencies for OS development
spin = "0.9"
bitflags = "1.3"
volatile = "0.5"
lazy_static = { version = "1.4", features = ["spin_no_std"] }

# Data structures
heapless = "0.8"

# Boot and low-level
bootloader = "0.9"
x86_64 = "0.15"
uart_16550 = "0.3"
pic8259 = "0.10"

# Async runtime (for the Nexus)
async-trait = "0.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
strip = true
