[package]
name = "heartwood"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
spin = { workspace = true }
bitflags = { workspace = true }
lazy_static = { workspace = true }
x86_64 = { workspace = true }
pic8259 = { workspace = true }
hmac-sha256 = { version = "1.1", default-features = false, features = ["opt_size"] }
glimmer_weave = { path = "../groves/glimmer_weave" }
# volatile = { workspace = true }
# uart_16550 = { workspace = true }
# bootloader = { workspace = true }

[lib]
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "heartwood"
path = "src/main.rs"
