[package]
name = "heartwood"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
spin = { workspace = true }
bitflags = { workspace = true }
lazy_static = { workspace = true }
# volatile = { workspace = true }
# x86_64 = { workspace = true } # Requires nightly Rust features
# uart_16550 = { workspace = true }
# bootloader = { workspace = true }

[lib]
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "heartwood"
path = "src/main.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
